src/objects/MDM_PEID_X_SourceID__c.object
<CustomObject>
    <description>The object contains a list of all PRoductEIDs and their IDs from source data for MDM Product app.</description>
    <fields>
        <fullName>CompositeSourceKey__c</fullName>
        <externalId>true</externalId>
        <label>CompositeSourceKey</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnterpriseID__c</fullName>
        <label>EnterpriseID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdFromSource__c</fullName>
        <label>IdFromSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Integration_Status__c</fullName>
        <label>MDM Integration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarantine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golden</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MDM_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MDM_Source</label>
        <referenceTo>MDM_Source__c</referenceTo>
        <relationshipLabel>MDM_PEID_X_SourceIDs</relationshipLabel>
        <relationshipName>MDM_PEID_X_SourceIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quarantine_Error__c</fullName>
        <label>Quarantine Error</label>
        <type>TextArea</type>
    </fields>
    <label>MDM_PEID_X_SourceID</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MDM_PEID_X_SourceID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_PEID_X_SourceIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>